[package]
name = "padm_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.x"
anyhow = "1.0.x"
async-std = "1.12.x"
clap = { version = "4.2.x", features = ["derive"] }
reqwest = { version = "0.11.x", features = ["blocking", "json"] }
serde = { version = "1.0.x", features = ["derive"] }
serde_json = "1.0.x"
tokio = { version = "1.28.x", features = ["full"] }
toml = "0.7.x"
once_cell = "1.17.x"
