[package]
name = "padm_exporter"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.x"
async-std = "1.13.x"
clap = { version = "4.2.x", features = ["derive"] }
env_logger = "0.10.x"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
indexmap = "1.9.3"
log = "0.4.x"
prometheus = "0.14.0"
reqwest = { version = "0.11.x", features = ["blocking", "json"] }
serde = { version = "1.0.x", features = ["derive"] }
serde_json = "1.0.x"
serde_yml = "0.0.12"
tokio = { version = "1.28.x", features = ["full"] }
toml = "0.7.x"
once_cell = "1.17.x"
url = "2.5.4"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "*", features = ["vendored"] }
